[package]
name = "resp-async"
description = "Asynchronous Redis protocol parser"
version = "0.0.5"
authors = ["Xiaoguang Sun <sunxiaoguang@gmail.com>"]
repository = "https://github.com/sunxiaoguang/resp-async"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
bytes = "1.5"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4"

[dev-dependencies]
simplelog = "0.12"
